# nornir_nokia_srlinux_lab

./: .env  .gitignore  Dockerfile-Plugins  README.md  config.yaml  deploy_config.py  docker-compose.override.yml  netbox_nornir.py  nornir_deploy_config.py  pyproject.toml  requirements.txt
app/: main.py
clab/: lab.clab.drawio  lab.clab.mod.yml  lab.clab.yaml  lab.clab.yaml.annotations.json  traffic.sh
clab/configs/: isp-01.cfg  isp-02.cfg
clab/configs/client2/: iperf.sh
clab/configs/client3/: iperf.sh
clab/configs/frr/: isp-01.cfg  isp-02.cfg
clab/configs/gnmic/: gnmic-config.yml
clab/configs/grafana/: dashboards.yml  datasource.yml
clab/configs/loki/: loki-config.yml
clab/configs/prometheus/: prometheus.yml
clab/configs/promtail/: promtail-config.yml
config_contexts/: ntp.json
inventory/: defaults.yaml  groups.yaml  hosts.yaml
netbox-docker/: Dockerfile  Dockerfile-Plugins  docker-compose.yml
netbox-docker/.github/workflows/: push.yml  release.yml
netbox-docker/configuration/: configuration.py  plugins.py
netbox-docker/env/: netbox.env
rendered_config/: CORE-01.json  CORE-02.json  CORE-03.json  CORE-04.json  DF-01.json  RJ-01.json  SP-01.json
src/: nornir_deploy_config.py  nornir_diff_config.py
src/config_contexts/: ibgp.json
src/inventory/: defaults.yaml
src/nornir_tasks/: deploy_config.py  diff_config.py
src/rendered_config/: CORE-01.cfg  CORE-01.json  CORE-02.cfg  CORE-02.json  CORE-03.cfg  CORE-03.json  CORE-04.cfg  CORE-04.json  DF-01.cfg  DF-01.json  RJ-01.cfg  RJ-01.json  SP-01.cfg  SP-01.json
src/rendered_config/json/: CORE-01.json  CORE-02.json  CORE-03.json  CORE-04.json  DF-01.json  RJ-01.json  (+1 more)
src/templates/: bgp.j2  interfaces.j2  ospf.j2  policy.j2  srlinux.j2  system.j2
templates/: hosts.j2  ibgp.json.j2  interfaces.j2  interfaces.json.j2  ospf.j2  ospf.json.j2  srlinux.j2  srlinux.json.j2  system.j2  system.json.j2
templates/json/: interfaces.json.j2  system.json.j2
templates/set/: interfaces.j2  srlinux.j2
(+1 files in other folders)
